# luao

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  demo.luao  demo_async.luao  demo_switch.luao  showcase.luao
crates/luao-checker/: Cargo.toml
crates/luao-checker/src/: checker.rs  diagnostic.rs  lib.rs  rules.rs
crates/luao-cli/: Cargo.toml
crates/luao-cli/src/: main.rs
crates/luao-lexer/: Cargo.toml
crates/luao-lexer/src/: cursor.rs  lexer.rs  lib.rs  span.rs  token.rs
crates/luao-lsp/: Cargo.toml
crates/luao-lsp/src/: completion.rs  diagnostics.rs  document.rs  goto_def.rs  hover.rs  lib.rs  semantic_tokens.rs  server.rs  symbols.rs
crates/luao-parser/: Cargo.toml
crates/luao-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/luao-resolver/: Cargo.toml
crates/luao-resolver/src/: lib.rs  resolver.rs  scope.rs  symbol.rs  types.rs
crates/luao-transpiler/: Cargo.toml
crates/luao-transpiler/src/: bundler.rs  class_emitter.rs  emitter.rs  enum_emitter.rs  expression_emitter.rs  formatter.rs  lib.rs  mangler.rs  minifier.rs  runtime.rs  statement_emitter.rs
runtime/: luao_runtime.lua
tests/fixtures/: abstract_class.luao  array_test.luao  checker_errors.luao  class_basic.luao  class_inheritance.luao  enum_basic.luao  generators_async.luao  generics.luao  instanceof_test.luao  interface_impl.luao  operator_overload.luao  properties.luao  sealed_class.luao  static_members.luao
vscode-luao/: language-configuration.json  package.json  tsconfig.json
vscode-luao/src/: extension.ts
vscode-luao/syntaxes/: luao.tmLanguage.json
