[workspace]
members = [
    "crates/luao-lexer",
    "crates/luao-parser",
    "crates/luao-resolver",
    "crates/luao-checker",
    "crates/luao-transpiler",
    "crates/luao-lsp",
    "crates/luao-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
luao-lexer = { path = "crates/luao-lexer" }
luao-parser = { path = "crates/luao-parser" }
luao-resolver = { path = "crates/luao-resolver" }
luao-checker = { path = "crates/luao-checker" }
luao-transpiler = { path = "crates/luao-transpiler" }
luao-lsp = { path = "crates/luao-lsp" }
smol_str = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
